--- a/js-backend/package.json
+++ b/js-backend/package.json
@@ -6,5 +6,8 @@
     "ipfs-http-client": "^60.0.1",
     "multer": "^1.4.5-lts.1",
     "web3modal": "^1.9.12"
+  },
+  "scripts": {
+    "start": "nodemon web3helper.mjs"
   }
 }
